Creamos la estructura del Header y el Navbar

--- a/Index.HTML
+++ b/Index.HTML
@@ -9,5 +9,24 @@
 </head>
 <body>
   
+  <head>
+    <h1>Joshua Dominguez Portafolio</h1>
+    <nav>
+      <div>
+        <img src="./Fav-Icon-JoshuaDominguez.png" alt="Joshua Logo">
+      </div>
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Portafolio</a></li>
+        <li><a href="#">Contactame</a></li>
+        <li><a href="#">Redes Sociales</a></li>
+      </ul>
+
+      <button>Llamar</button>
+     </nav>
+
+  </head>
+
 </body>
 </html>
