Vinculamos Google Fonts y Material Icons

--- a/Index.HTML
+++ b/Index.HTML
@@ -6,6 +6,12 @@
   <title>Joshua Dominguez</title>
   <link rel="stylesheet" href="./Style.Css">
   <link rel="icon" href="./Fav-Icon-JoshuaDominguez.png" type="image/png"/>
+
+    <!-- Google Fonts -->
+
+  <!-- Material Icons -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"/>
+
 </head>
 <body>
   
@@ -14,6 +20,7 @@
     <nav>
       <div>
         <img src="./Fav-Icon-JoshuaDominguez.png" alt="Joshua Logo">
+
       </div>
       <ul>
         <li><a href="#">Inicio</a></li>
@@ -24,9 +31,12 @@
       </ul>
 
       <button>Llamar</button>
+       <button>Llamar<span class="material-symbols-outlined">phone</span></button>
      </nav>
 
   </head>
+
+  <h1>Poppins</h1>
 
 </body>
 </html>
