Agregamos hojas de estilo y de resset

--- a/Index.HTML
+++ b/Index.HTML
@@ -4,8 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joshua Dominguez</title>
-  <link rel="stylesheet" href="./Style.Css">
+  <link rel="stylesheet" href="./CSS/Style.Css">
   <link rel="icon" href="./Fav-Icon-JoshuaDominguez.png" type="image/png"/>
+
+    <!-- stylesheet -->
+
+
+   <link rel="stylesheet" href="./CSS/global.CSS">
+
+   <link rel="stylesheet" href="./CSS/resset.css">
 
     <!-- Google Fonts -->
 
