--- a/Index.HTML
+++ b/Index.HTML
@@ -22,14 +22,13 @@
 </head>
 <body>
   
-  <head>
-    <h1>Joshua Dominguez Portafolio</h1>
-    <nav>
-      <div>
+  <head class="header">
+    <nav class="navbar">
+      <div class="navbar-logo">
         <img src="./Fav-Icon-JoshuaDominguez.png" alt="Joshua Logo">
 
       </div>
-      <ul>
+      <ul class="navbar-menu">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">About Me</a></li>
         <li><a href="#">Portafolio</a></li>
@@ -37,8 +36,7 @@
         <li><a href="#">Redes Sociales</a></li>
       </ul>
 
-      <button>Llamar</button>
-       <button>Llamar<span class="material-symbols-outlined">phone</span></button>
+       <button  class="button-primary">Llamar<span class="material-symbols-outlined">phone</span></button>
      </nav>
 
   </head>
