Maquetamos y estilizamos la seccion hero

--- a/Index.HTML
+++ b/Index.HTML
@@ -40,8 +40,38 @@
      </nav>
 
   </head>
+ </header>
 
-  <h1>Poppins</h1>
+
+
+
+
+
+  <main>
+
+
+    <!-- Hero -->
+
+
+    <section class="hero">
+
+
+      <div class="hero-content">
+
+
+        <h1>
+          <img src="./assets/JoshuaDominguez_Foto.jpeg" alt="Joshua Dominguez Foto">
+        </h1>
+        <p class="hero-text">Grandes mentes para grandes proyectos</p>
+        <div class="hero-actions">
+          <button class="button-secondary">Llamar</button>
+        </div>
+        <p class="hero-text">Hola! Soy Joshua Dominguez diseñador con especialidad en marketing digital y</p>
+        <p class="hero-text">diseño aplicado con un enfoque publicitario</p>
+
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
