Corrección landing page

--- a/Index.HTML
+++ b/Index.HTML
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minecraft</title>
+    <title>Joshua Dominguez</title>
     <link rel="icon" href="./Fav-Icon-JoshuaDominguez.png" />
 
     <!-- Styles Sheets -->
@@ -29,11 +29,11 @@
         </div>
 
         <ul class="navbar-menu">
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#Videos">Videos</a></li>
-          <li><a href="#Works">Work</a></li>
-          <li><a href="#AboutMe">About Me</a></li>
-          <li><a href="#Contact">Contactame</a></li>
+          <li><a href="#header">Inicio</a></li>
+          <li><a href="#hero">Contactame</a></li>
+          <li><a href="#works">Work</a></li>
+          <li><a href="#aboutme">About Me</a></li>
+          <li><a href="#demoreels">Demo Reels</a></li>
         </ul>
 
         <button class="button-primary">Contáctame <span class="material-symbols-outlined"> phone </span></button>
@@ -43,10 +43,10 @@
     <main>
       <!-- Hero -->
 
-      <section class="hero">
+      <section class="hero" id="hero">
         <div class="hero-content">
           <h1>
-
+          
           </h1>
           <p> ¡Hola! Soy Joshua Dominguez diseñador con especialidad en marketing digital</p>
           <div class="hero-actions">
@@ -79,7 +79,7 @@
               </ul>
             </div>
             <div class="works-showcase">
-                <h3 class="works-text">Desde Mascooltura, plataforma creativa de moda con intención, hasta proyectos para marcas como La Alcachofa Cholula, Amuebar, Grow, Voilá y Hotel Mi Ranchito, mi enfoque se centra en conectar a las marcas con sus públicos a través de storytelling, branding y marketing de alto impacto. Trabajo cada estrategia de forma integral: identidad visual, gestión de redes sociales, producción de contenido editorial y audiovisual, campañas digitales y activaciones con enfoque en resultados medibles y crecimiento real.</h3>
+              <h3 class="works-text">Desde Mascooltura, plataforma creativa de moda con intención, hasta proyectos para marcas como La Alcachofa Cholula, Amuebar, Grow, Voilá y Hotel Mi Ranchito, mi enfoque se centra en conectar a las marcas con sus públicos a través de storytelling, branding y marketing de alto impacto. Trabajo cada estrategia de forma integral: identidad visual, gestión de redes sociales, producción de contenido editorial y audiovisual, campañas digitales y activaciones con enfoque en resultados medibles y crecimiento real.</h3>
               <div class="works-info">
                 <p>(Fotografías originales tomadas por mí)</p>
               </div>
@@ -89,7 +89,7 @@
       </section>
       
       <!-- Media -->
-       <section class="media">
+       <section class="media" id="demoreels">
         <div class="wrapper">
             <div class="media-header">
                 <h2>Clientes con los que he trabajado</h2>
@@ -119,8 +119,8 @@
     </section>
 
     <!-- About Me -->
-    <section class="about-me" id="about me">
-        <div class="wrapper">
+    <section class="aboutme" id="aboutme">
+        <div class="aboutme">
             <div class="about-me-img">
                 <img src="./assets/JoshuaDominguez.png" alt="Joshua">
             </div>
